@@ -52,7 +52,7 @@
 		if ({{ map_var }}.viewer != null) { return; }
 		{{ map_var }}.load("{{ map_var }}_map", "mini");
 		{% for layer in layers %}
-		{{ map_var }}.viewer.addGeoportalLayer('{{ layer.name }}', {opacity: {{ layer.opacity }}, name: '{{ layer.switcher_name }}', buffer: 1});
+		{{ map_var }}.viewer.addGeoportalLayer('{{ layer.name }}', {opacity: {{ layer.opacity }}, name: '{{ layer.switcher_name }}', buffer: 1, transitionEffect: 'resize'});
 		{% endfor %}
 		var styleMap = new OpenLayers.StyleMap(OpenLayers.Util.applyDefaults({
 				fillColor: "#{{ options.color }}",
